@@ -1,3 +1,8 @@
+2006-10-02  Vlad Seryakov  <seryakov@users.sf.net>
+
+	nsd/driver.c: Make driver to use Unix domain sockets of 
+	type DGRAM and STREAM
+
 2006-09-28  Vlad Seryakov  <seryakov@users.sf.net>
 
 	* Makefile:
